# tvschedule-rs

./: .gitignore  Cargo.toml  LICENSE  config.example.gura
src/: main.rs  markdown.rs  schedule.rs  summary.rs  the_movie_db.rs
