[package]
name = "tvschedule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
futures-util = "0.3.29"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_gura = "0.1.8"
time = { version = "0.3.41", features = ["serde-human-readable", "macros", "quickcheck"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
itertools = "0.14.0"