[package]
name = "tvschedule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.32"
futures-util = "0.3.32"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_gura = "0.2.0"
time = { version = "0.3.47", features = ["serde-human-readable", "macros", "quickcheck"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
itertools = "0.14.0"
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"